<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">Sudoku</string>
   <string name="main_title">Android Sudoku</string>
   <string name="continue_label">Continue</string>
   <string name="new_game_label">New Game</string>
   <string name="about_label">About</string>
   <string name="exit_label">Exit</string>

   <string name="settings_label">Settings...</string>
   <string name="settings_title">Sudoku settings</string>
   <string name="settings_shortcut">s</string>
   
   <string name="music_title">Music</string>
   <string name="music_summary">Play background music</string>
  
   <string name="hints_title">Hints</string>
   <string name="hints_summary">Show hints during play</string>

   <string name="high_score_title">High Score</string>
   <string name="high_score_summary">Show highest score during play</string>
   
   <string name="new_game_title">Difficulty</string>
   <string name="easy_label">Easy</string>
   <string name="medium_label">Medium</string>
   <string name="hard_label">Hard</string>

   <string name="about_title">About this Sudoku app</string>
   <string name="about_text">\
Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.
</string>

	 <string name="login_title">Login</string>
   	 <string name="login_label">please login below</string>
   	  
   	 <string name="facebook_label">Facebook</string>
   	 <string name="gmail_label">Gmail</string>
     <string name="your_account_label">Existing account</string>
</resources>