<?xml version="1.0" encoding="utf-8"?>

 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:background="@color/background"
   android:layout_height="fill_parent"
   android:layout_width="fill_parent"
   android:padding="15dip"
   android:orientation="horizontal">
   <LinearLayout
      android:orientation="vertical"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:layout_gravity="center"
      android:paddingLeft="20dip"
      android:paddingRight="20dip">
      <TextView
         android:text="@string/main_title"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="20dip"
         android:textSize="24.5sp" />
      <TableLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:stretchColumns="*">
         <TableRow>
            <Button
               android:id="@+id/facebook_button"
               android:text="@string/facebook_label" />
            
            <Button
               android:id="@+id/gmail_button"
               android:text="@string/gmail_label" />
         </TableRow>
         <TableRow>
            <Button
               android:id="@+id/your_account_button"
               android:text="@string/your_account_label" />
            <Button
               android:id="@+id/exit_button"
               android:text="@string/exit_label" />
         </TableRow>
      </TableLayout>
   </LinearLayout>
</LinearLayout>